# skaro

./: .gitignore  LICENSE  Makefile  README.md  View.ipynb  dace_testing.py  environment.yaml  playing_around.py  requirements.txt  script.py  setup.cfg  setup.py  test.py  test_script.py
.virtual_documents/notebooks/: Galaxy_component_maps.ipynb  Galaxy_components.ipynb  Galaxy_properties.ipynb  Original_NGPPS_sample.ipynb  Planet_maps.ipynb  Planet_model.ipynb  Planets.ipynb
data/interim/: HZ_distances.txt
data/raw/: LGs_4096_GAL_FOR.txt  LGs_8192_GAL_FOR.txt  testsnap.readme
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Component_maps.ipynb  Component_populations.ipynb  Empirical_occurence_rates.ipynb  Galaxy_Components.ipynb  Galaxy_component_maps.ipynb  Galaxy_components.ipynb  Galaxy_properties.ipynb  Metallicity_model_effects.ipynb  MilkyWay.ipynb  Original_NGPPS_sample.ipynb  Planet_Model.ipynb  Planet_maps.ipynb  Planet_model.ipynb  Planet_numbers.ipynb  Planets.ipynb  Radial_planet_distribution.ipynb  View.ipynb  planet_1dprofiles.py  planet_2dprofiles.py  planet_maps.py  run_notebook.sh  setup.py  yt_maps.py
scripts/: plot_planet_metallicity_distance_data.py
src/: __init__.py
src/data/: load.py
src/gallifrey/: analysis.py  customdecorator.py  fields.py  filter.py  halo.py  imf.py  model.py  particles.py  planets.py  setup.py  stars.py
src/gallifrey/data/: dace.py  exoplanet_archive.py  load.py  paths.py  preprocessing.py
src/gallifrey/decomposition/: decomposition.py  gravity.py  kdtree.py  mordor.py
src/gallifrey/scripts/: plot_planet_metallicity_distance_data.py
src/gallifrey/utilities/: dataframe.py  decorator.py  logging.py  math.py  structures.py  time.py
src/gallifrey/visualization/: LinLogScale.py  __init__.py  manager.py  seaborn.py  seaborn_extensions.py  utilities.py  visualization_utils.py  yt_maps.py
src/skaro/: analysis.py  model.py  particles.py  stars.py
src/skaro/data/: dace.py  exoplanet_archive.py  load.py  paths.py  preprocessing.py
src/skaro/decomposition/: decomposition.py  gravity.py  kdtree.py  mordor.py
src/skaro/utilities/: dataframe.py  logging.py  math.py
src/skaro/visualization/: LinLogScale.py  __init__.py  seaborn_extensions.py  visualization_utils.py
(+18 files in other folders)
